@@ -3,7 +3,7 @@
 # N.M. Maclaren, October 2000.
 
 AUTOMAKE_OPTIONS = foreign
-ACLOCAL_AMFLAGS= -I libopts/m4
+ACLOCAL_AMFLAGS= -I ../m4 -I libopts/m4
 
 AM_CPPFLAGS=	$(LIBOPTS_CFLAGS)
 LDADD=	$(LIBOPTS_LDADD)
