@@ -1,3 +1,5 @@
+* Add NTP_CACHEVERSION mechanism to ignore incompatible config.cache
+* Enable gcc -Wstrict-overflow for gsoc_sntp as well
 * [Bug 1090] Fix bogus leap seconds in refclock_hpgps.
 (4.2.5p168) 2009/04/29 Released by Harlan Stenn <stenn@ntp.org>
 * Include (4.2.4p7-RC4)
